# michi-ocr

./: .gitignore  README.md  flake.nix  pyproject.toml
michi_ocr/: __init__.py  __main__.py  config.py  daemon.py  overlay.py  pipeline.py  translate.py  tts.py
michi_ocr/ocr/: engine.py  lens.py  surya_engine.py
michi_ocr/ocr/lens_protos/: aim_communication_pb2.py  aim_query_pb2.py  lens_overlay_client_context_pb2.py  lens_overlay_client_logs_pb2.py  lens_overlay_client_platform_pb2.py  lens_overlay_cluster_info_pb2.py  lens_overlay_contextual_inputs_pb2.py  lens_overlay_deep_gleam_data_pb2.py  lens_overlay_document_pb2.py  lens_overlay_filters_pb2.py  lens_overlay_geometry_pb2.py  lens_overlay_image_crop_pb2.py  lens_overlay_image_data_pb2.py  lens_overlay_interaction_request_metadata_pb2.py  lens_overlay_knowledge_intent_query_pb2.py  lens_overlay_knowledge_query_pb2.py  lens_overlay_math_solver_query_pb2.py  lens_overlay_message_set_pb2.py  lens_overlay_overlay_object_pb2.py  lens_overlay_payload_pb2.py  lens_overlay_phase_latencies_metadata_pb2.py  lens_overlay_platform_pb2.py  lens_overlay_polygon_pb2.py  lens_overlay_request_id_pb2.py  lens_overlay_request_type_pb2.py  lens_overlay_routing_info_pb2.py  lens_overlay_selection_type_pb2.py  lens_overlay_server_pb2.py  lens_overlay_service_deps_pb2.py  lens_overlay_stickiness_signals_pb2.py  lens_overlay_surface_pb2.py  lens_overlay_text_pb2.py  lens_overlay_text_query_pb2.py  lens_overlay_translate_stickiness_signals_pb2.py  lens_overlay_video_context_input_params_pb2.py  lens_overlay_video_params_pb2.py  lens_overlay_visual_input_type_pb2.py  lens_overlay_visual_search_interaction_data_pb2.py  lens_overlay_visual_search_interaction_log_data_pb2.py
nix/: hm-module.nix  package.nix
scripts/: michi-ocr.sh  voicevox-compose.yml
