[project]
name = "michi-ocr"
version = "0.1.0"
description = "Wayland-native OCR -> translate -> speak -> overlay tool for learning Japanese"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "curl_cffi",
    "protobuf",
    "pillow",
    "jaconv",
]

[project.optional-dependencies]
# Offline OCR fallback (Surya, torch). Install torch from the ROCm index — see README.
# Surya 0.15.x is torch-native; 0.16+ ("Surya2") only serves via vLLM/llama.cpp.
local = [
    "surya-ocr==0.15.4",
    "transformers>=4.51,<4.54",
    "tokenizers>=0.21,<0.22",
]
dev = [
    "ruff",
]

[project.scripts]
michi-ocr = "michi_ocr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["michi_ocr"]

[tool.ruff]
line-length = 120
# Vendored, generated, or upstream-verbatim — not ours to lint.
extend-exclude = ["michi_ocr/ocr/lens_protos", "michi_ocr/ocr/lens_betterproto.py"]

[tool.ruff.lint]
ignore = ["E402"]
